--- a/bot_app/utils/log_config.yaml
+++ b/bot_app/utils/log_config.yaml
@@ -68,11 +68,11 @@ root:
 
 loggers:
     bot_app:
-        level: DEBUG
+        level: WARN
         handlers: [info_file_handler, error_file_handler, critical_file_handler, debug_file_handler, warn_file_handler]
         propogate: yes
 
     __main__:
-        level: DEBUG
+        level: WARN
         handlers: [console, info_file_handler, error_file_handler, critical_file_handler, debug_file_handler, warn_file_handler]
         propogate: yes
